fix: styling for overflowing code snippet by limiting the size based on the view port and excess spaces

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -142,7 +142,7 @@
   }
 
   .nav {
-    width: 80vw;
+    width: calc(80vw + 1rem);
     border-radius: 0 0 1rem 1rem;
   }
   .nav .relative {
