--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -4,6 +4,7 @@
   gap: 1rem;
   background-color: #161f1c;
   padding: 1rem;
+  border-radius: 1rem;
 }
 
 .postCard h1 {
