--- a/src/pages/PostPage/PostPage.module.css
+++ b/src/pages/PostPage/PostPage.module.css
@@ -24,6 +24,10 @@
   color: #ffffff;
 }
 
+.content {
+  max-width: calc(100vw - 3rem);
+}
+
 .content p,
 .content ul {
   color: #d1d5db;
@@ -57,5 +61,9 @@
 @media screen and (min-width: 1024px) {
   .postWrapper {
     border-radius: 1rem;
+  }
+
+  .content {
+    max-width: calc(80vw - 22rem);
   }
 }
